--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -332,7 +332,7 @@ a[href='https://www.froala.com/wysiwyg-editor?k=u'] {
       color: #c1c6cd;
       position: absolute;
       top: -9px;
-      right: -3px;
+      right: -7px;
       width: 18px;
       font-weight: bold;
       opacity: 0;
@@ -352,3 +352,18 @@ a[href='https://www.froala.com/wysiwyg-editor?k=u'] {
   }
 }
 
+.uk-notification-message-danger {
+  width: 380px !important;
+  font-size: 14px;
+  font-weight: normal !important;
+  background-color: #fef0f0;
+  color: #f56c6c;
+  border-radius: 3px;
+  border: 1px solid #fde2e2;
+  padding: 10px 20px 10px 20px;
+  box-shadow: inset 0 0 0 1px #fef0f0;
+
+  .uk-notification-close {
+    top: 13px;
+  }
+}
