--- a/src/assets/style/library.scss
+++ b/src/assets/style/library.scss
@@ -27,7 +27,7 @@ $box-shadow: inset 0 0 0 1px #2489f3;
   align-items: center;
   min-width: 148px;
   min-height: 17px;
-  max-height: 200px;
+  //max-height: 200px;
   box-sizing: border-box;
   line-height: 1 !important;
   position: relative;
