perf: 文件模板在线编辑-优化删除操作-参数默认选择

--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -195,51 +195,11 @@ body, html {
   text-align: center;
   box-shadow: 0 3px 8px #00000026;
   background-color: transparent;
-  //background: #fff;
-  position: fixed;
-  width: 100%;
-  left: 0;
-  right: 0;
-  z-index: 999;
-  //padding-left: calc(100% - 99%);
 }
 
 
 .fr-wrapper {
   border: none !important;
-}
-
-
-.pg-flex {
-  display: flex;
-  align-items: center;
-}
-
-.pg-button {
-  color: #ffffff;
-  border: 1px solid $primary;
-  background: #ffffff;
-  overflow: visible;
-  text-transform: none;
-  display: inline-block;
-  box-sizing: border-box;
-  vertical-align: middle;
-  font-size: 14px;
-  text-align: center;
-  text-decoration: none;
-  text-transform: uppercase;
-  transition: .1s ease-in-out;
-  transition-property: color, background-color, border-color;
-  cursor: pointer;
-
-  &:hover {
-    color: #fff;
-    background-color: $primary;
-  }
-}
-
-.pg-editor-make-container {
-  margin-top: 36px;
 }
 
 .pg-editor-body-container {
@@ -743,17 +703,17 @@ body, html {
   position: fixed;
   z-index: 999;
 
-  &:after {
-    content: '';
-    border-width: 9px;
-    border-style: solid;
-    border-color: transparent transparent #fff transparent;
-    width: 0;
-    height: 0;
-    position: absolute;
-    top: -17px;
-    left: 60px;
-  }
+  //&:after {
+  //  content: '';
+  //  border-width: 9px;
+  //  border-style: solid;
+  //  border-color: transparent transparent #fff transparent;
+  //  width: 0;
+  //  height: 0;
+  //  position: absolute;
+  //  top: -17px;
+  //  left: 60px;
+  //}
 }
 
 .pg-select-container {
