fix: 文件模板在线编辑 1. Bug修复 2. 参数优化

--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -778,8 +778,6 @@ body, html {
   background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAI5JREFUOE9jZKAQMFKon2G4GfBhocZ/gfgbeL31YaHGmf//GEoEE28cAIUfiuL3C9XzGRkYJ+AyBKSZkYFhM3/8jUZY4GPYhssQbJoxXAAzFd0QkGYGRoazAnE30tGjHad/PyzQKGFgZOhmYGA4i0szThfAbPm4SLPmP8N/WWw24wwDUlPmcEuJpPofpB4AWV8yETIez84AAAAASUVORK5CYII=");
 }
 
-.svelte-use-form-hint.svelte-1lthqr2 {
-  color: #f56c6c !important;
-  font-size: 12px !important;
+.pg-table-container {
+  cursor: pointer;
 }
-
