--- a/src/assets/style/library.scss
+++ b/src/assets/style/library.scss
@@ -36,6 +36,7 @@ $box-shadow: inset 0 0 0 1px #2489f3;
 
   &[data-shadow-value]:empty:after, &[data-layout=dropdown]:empty:after {
     width: 100%;
+    max-width: 668px;
     //position: absolute;
     position: relative;
     left: 0;
