feat:文件模板在线编辑-当前使用版本-稳定

--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -781,3 +781,9 @@ body, html {
 .pg-table-container {
   cursor: pointer;
 }
+
+.add-option {
+  display: inline-block;
+  margin-right: 5px;
+  color: #666666;
+}
